Improve OpenAI initialization error handling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             DATABASE_URL=${{ secrets.DATABASE_URL || 'postgresql://dummy:dummy@localhost:5432/dummy' }}
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY || 'dummy_key_for_build' }}
 
   deploy:
     needs: build
